# etf-gtaa

./: .gitignore  CONTEXT.md  README.md  environment.yml  pyproject.toml
notebooks/: 01_faber_gtaa_replication.ipynb  02_strategy_comparison.ipynb
src/etf_gtaa/: __init__.py  analysis.py  backtest.py  cli.py  config.py  data.py  metrics.py  signals.py
tests/: conftest.py  test_analysis.py  test_backtest.py  test_data.py  test_metrics.py  test_signals.py
