[project]
name = "etf-gtaa"
version = "0.1.0"
description = "Replication of Faber (2007) GTAA timing rule on ETFs."
authors = [{ name = "Bruno Almeida", email = "bfl.almeida@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
keywords = ["etf", "quantitative-finance", "backtest", "tactical-asset-allocation"]
dependencies = [
    "pandas (>=2.2,<3.0)",
    "numpy (>=1.26,<2.0)",
    "scipy (>=1.13,<2.0)",
    "matplotlib (>=3.8,<4.0)",
    "yfinance (>=0.2.40,<0.3)",
    "pyarrow (>=15.0,<20.0)",
]

[project.scripts]
etf-gtaa = "etf_gtaa.cli:main"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "etf_gtaa", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-cov = ">=5.0"
ruff = ">=0.5.0"
mypy = ">=1.10"
jupyter = ">=1.0"
ipykernel = ">=6.29"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=etf_gtaa --cov-report=term-missing --cov-report=html"
filterwarnings = [
    "ignore::DeprecationWarning:yfinance.*",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "D",   # pydocstyle
]
ignore = [
    "D100", # missing docstring in public module
    "D104", # missing docstring in public package
    "D203", # 1 blank line before class docstring (conflicts with D211)
    "D213", # multi-line summary second line (conflicts with D212)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
files = ["src"]

[[tool.mypy.overrides]]
module = "tests.*"
strict = false
